--- a/App/munkipkg/Remote Access/build-info.plist
+++ b/App/munkipkg/Remote Access/build-info.plist
@@ -5,7 +5,7 @@
 	<key>distribution_style</key>
 	<false/>
 	<key>identifier</key>
-	<string>consulting.artichoke.RemoteAccess</string>
+	<string>com.github.RemoteAccess</string>
 	<key>install_location</key>
 	<string>/</string>
 	<key>name</key>
